--- a/src/app/theme.module.css
+++ b/src/app/theme.module.css
@@ -13,6 +13,10 @@
         &:hover {
             background-color: var(--mantine-color-elimai-4);
         }
+
+        &:disabled {
+            background-color: var(--mantine-color-slate-5);
+        }
     }
 
     &[data-variant="outline"] {
