--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,33 @@ a {
         color: var(--mantine-color-gray-6);
     }
 }
+
+.disabled {
+    color: var(--mantine-color-slate-5);
+    ;
+}
+
+.active {
+
+    color: var(--mantine-color-elimai-6);
+    ;
+}
+
+.otp-container {
+    width: 100%;
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    justify-content: center;
+
+    .otp {
+        flex: 1;
+        width: 40px;
+        height: 50px;
+        /* padding: 10px 20px; */
+    }
+
+    .separator {
+        text-align: 'center';
+    }
+}
