--- a/src/app/theme.module.css
+++ b/src/app/theme.module.css
@@ -11,6 +11,8 @@
         background-color: var(--mantine-color-elimai-6);
         color: var(--mantine-color-white);
 
+        transition: background .25s ease-in-out;
+
         &:hover {
             background-color: var(--mantine-color-elimai-4);
         }
@@ -20,15 +22,18 @@
         }
     }
 
-    &[data-variant="unstyled"] {
-        display: block;
-        padding: var(--mantine-spacing-xs) var(--mantine-spacing-md);
-        border-radius: var(--mantine-radius-md);
-        font-weight: 500;
-        background: inherit;
-        color: inherit;
-        font-size: 1rem;
+    &[data-variant="alert"] {
+        background-color: var(--mantine-color-red-6);
+        color: var(--mantine-color-white);
+        transition: background .25s ease-in-out;
 
+        &:hover {
+            background-color: var(--mantine-color-red-4);
+        }
+
+        &:disabled {
+            background-color: var(--mantine-color-red-1);
+        }
     }
 
     &[data-variant="outline"] {
