--- a/src/widgets/BaseLayout.module.css
+++ b/src/widgets/BaseLayout.module.css
@@ -3,8 +3,18 @@
     padding: var(--mantine-spacing-xs) var(--mantine-spacing-md);
     border-radius: var(--mantine-radius-md);
     font-weight: 500;
+    transition: color .6s ease;
 
     @mixin hover {
         background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
     }
+}
+
+.active {
+    color: var(--mantine-color-elimai-6);
+    text-decoration: underline;
+    text-decoration-color: var(--mantine-color-elimai-6);
+    text-underline-offset: 5px;
+    text-decoration-thickness: 2px;
+
 }
