feat: profile & generate ticket in admin

--- a/src/app/theme.module.css
+++ b/src/app/theme.module.css
@@ -7,6 +7,8 @@
 }
 
 .button {
+    box-sizing: border-box;
+
     &[data-variant="base"] {
         background-color: var(--mantine-color-elimai-6);
         color: var(--mantine-color-white);
