--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,20 +33,21 @@ a {
 
 
 .otp-container {
-    width: 100%;
     display: flex;
-    gap: 5px;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 
     .otp {
-        flex: 1;
-        width: 40px;
-        height: 50px;
-        /* padding: 10px 20px; */
+        width: 100%;
+        height: 45,
     }
 
     .separator {
-        text-align: 'center';
+        width: 20;
     }
+
+}
+
+@media(max-width:500px) {
+    .otp {}
 }
