--- a/src/app/not-found.module.css
+++ b/src/app/not-found.module.css
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0 10px;
 }
 
 .content {
@@ -18,6 +19,7 @@
     font-size: 32px;
     font-weight: bold;
     text-transform: uppercase;
+    text-align: center;
 
 
     background: #B8E1FC;
